--- a/wp-content/themes/luximobil/sass/site/_styles.scss
+++ b/wp-content/themes/luximobil/sass/site/_styles.scss
@@ -1499,10 +1499,6 @@ div#n2-ss-2 {
 }
 
 // Filters styles
-.filters-col {
-  padding-left: 0;
-}
-
 .searchandfilter {
   ul {
     margin: 0 !important;
@@ -1525,8 +1521,8 @@ div#n2-ss-2 {
     }
     .sf-meta-range-slider {
       .sf-input-range-number {
-        max-width: 126px;
-        width: 126px;
+        max-width: 123px;
+        width: 123px;
         padding-left: 10px;
         background: #e1e1e1;
         border: 1px solid transparent;
