--- a/wp-content/themes/luximobil/sass/site/_tablet-styles.scss
+++ b/wp-content/themes/luximobil/sass/site/_tablet-styles.scss
@@ -52,6 +52,14 @@
   }
 }
 
+.searchandfilter {
+  ul .sf-meta-range-slider {
+    .sf-input-range-number {
+      max-width: 140px;
+      width: 135px;
+    }
+  }
+}
 
 .categories-section {
   .category-box {
